# HexTech_Muscle

./: .clang-format  .gitignore  LICENSE  README.md  platformio.ini
client/python/: .editorconfig  .gitignore  LICENSE  README.md  __init__.py  __main__.py  pyproject.toml
client/python/hextech_muscle/: __init__.py  __main__.py  example.py  hextech.py
data/: default_config.json
lib/HexFF-Core/: library.json
lib/HexFF-Core/include/HexFF/: Board.h  Driver.h  HexResources.h  I2CDriver.h  I2CMasterDriver.h  MemberFnRefreshDriver.hpp  MessageDispatcher.h  PinFlasherDriver.h  PinInputDriver.h  PinOutputDriver.h  ReaderDriver.h  SPIDriver.h  SerialDriver.h  StateMachine.h  StateMachineBaseDriver.h  VoltageDriver.h  factory.h  utils.h
lib/HexFF-Core/src/: Board.cpp  Driver.cpp  HexResources.cpp  I2CDriver.cpp  I2CMasterDriver.cpp  MessageDispatcher.cpp  PinFlasherDriver.cpp  PinInputDriver.cpp  PinOutputDriver.cpp  SPIDriver.cpp  SerialDriver.cpp  StateMachineBaseDriver.cpp  VoltageDriver.cpp  utils.cpp
lib/HexFF-D-Expander/: library.json
lib/HexFF-D-Expander/include/HexFF/: TCA9535.h  TCA9535Driver.h
lib/HexFF-D-Expander/src/: TCA9535.cpp  TCA9535Driver.cpp
lib/HexFF-D-Motor/: README.md  library.json
lib/HexFF-D-Motor/include/HexFF/: MotorDriver.h
lib/HexFF-D-Motor/src/: MotorDriver.cpp
lib/HexFF-D-Stepper/: library.json
lib/HexFF-D-Stepper/include/HexFF/: StepperDriver.h  StepperRunnerDriver.h  dumbledore_stepper.h
lib/HexFF-D-Stepper/src/: StepperDriver.cpp  StepperRunnerDriver.cpp  dumbledore_stepper.cpp
src/: main.cpp
